# askmedb

./: .gitignore  CONCURRENCY_REPORT.md  LICENSE  PUBLISHING.md  README.md  design.html  pyproject.toml  requirements.txt
askdb/: __init__.py
askdb/context/: builder.py  prompts.py  schema.py
askdb/core/: __init__.py  config.py  engine.py  exceptions.py  result.py
askdb/db/: base.py  sqlalchemy_connector.py  sqlite.py
askdb/llm/: base.py  litellm_provider.py
askdb/pipeline/: __init__.py  correction.py
askmedb/: __init__.py
askmedb/cli/: __init__.py  annotate.py  connect.py  eval.py  serve.py
askmedb/context/: __init__.py  builder.py  pandas_schema.py  prompts.py  schema.py
askmedb/core/: __init__.py  config.py  engine.py  exceptions.py  federated.py  result.py
askmedb/db/: __init__.py  bigquery_connector.py  pandas_connector.py  snowflake_connector.py  sqlalchemy_connector.py  sqlite.py
askmedb/eval/: __init__.py  metrics.py  runner.py
askmedb/llm/: __init__.py
askmedb/mcp/: __init__.py  server.py
askmedb/pipeline/: __init__.py  conversation.py  correction.py  parser.py  validation.py
examples/: README.md  askdb_colab_demo.ipynb  askmedb_colab_demo.ipynb  quickstart.py  setup_db.py
examples/cloudmetrics/: app.py
examples/cloudmetrics/knowledge/: learnings.json  query_patterns.sql  schema.json
examples/csv/: quickstart.py
examples/csv/cloudmetrics/: app.py  sample_queries.py
examples/csv/data/: customers.csv  invoices.csv  plans.csv  subscriptions.csv  support_tickets.csv
examples/sqlite/: quickstart.py
examples/sqlite/cloudmetrics/: app.py  sample_queries.py
examples/sqlite/cloudmetrics/knowledge/: business_rules.json
examples/sqlite/data/: cloudmetrics.db
