[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askdb"
version = "0.1.0"
description = "A library for building natural-language database query agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AskDB Contributors" },
]
keywords = ["database", "sql", "llm", "natural-language", "agent", "data-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.0.0",
]

[project.optional-dependencies]
sql = ["sqlalchemy>=2.0.0"]
examples = [
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/askdb/askdb"
Repository = "https://github.com/askdb/askdb"
Issues = "https://github.com/askdb/askdb/issues"

[tool.hatch.build.targets.wheel]
packages = ["askdb"]

[tool.ruff]
target-version = "py310"
line-length = 100
