[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askmedb"
version = "0.2.1"
description = "A library for building natural-language database query agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AskMeDB Contributors" },
]
keywords = ["database", "sql", "llm", "natural-language", "agent", "data-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.0.0",
]

[project.optional-dependencies]
sql = ["sqlalchemy>=2.0.0"]
pandas = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",       # Excel (.xlsx) support
]
bigquery = [
    "google-cloud-bigquery>=3.0.0",
]
snowflake = [
    "snowflake-connector-python>=3.0.0",
    "cryptography>=3.0.0",   # required for key-pair auth
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "sqlalchemy>=2.0.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "google-cloud-bigquery>=3.0.0",
    "snowflake-connector-python>=3.0.0",
    "cryptography>=3.0.0",
    "mcp>=1.0.0",
]
examples = [
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
askmedb = "askmedb.cli:main"

[project.urls]
Homepage = "https://github.com/manaranjanp/askmedb"
Repository = "https://github.com/manaranjanp/askmedb"
Issues = "https://github.com/manaranjanp/askmedb/issues"

[tool.hatch.build.targets.wheel]
packages = ["askmedb"]

[tool.ruff]
target-version = "py310"
line-length = 100
